[CrOS Tether] When a Tether host has become lost, display a warning.

This remedies the following situation:
  (1) Host scan discovers a potential Tether host device.
  (2) User visits the "internet detail page", which displays information
      about that Tether host.
  (2b - optional) User opens the tether confirmation dialog.
  (3) A subsequent host scan can no longer find the device.
  (4) User can no longer connect to the device, but has no idea why.

This CL places a warning in red text on both the internet detail page
and the tether confirmation dialog when this situation occurs.

Bug: 750955, 672263
Change-Id: I75666e25a0df0add94ea469599641b0703b64d76